--- a/lessons/CS102 Lesson 1 - Intro, Unix, Git.html
+++ b/lessons/CS102 Lesson 1 - Intro, Unix, Git.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>CS102 Lesson 1 – Intro, Unix, Git</title>
+  <title>Lesson 1 - Intro, Unix, Git</title>
 	<link rel="stylesheet" href="../assets/css/slides.css">
   <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 
@@ -10,16 +10,13 @@
 <body>
 
 <textarea id="source">
-
-# Lesson 1 – Intro, Unix, Git
 ## CS102 @ Cooper Union
-
 ---
 
 ## Intro
 - Name, Major, Year
   - What do you hope to get out of this class?
-  - Icebreaker: “Sock, sock, shoe, shoe” or “Sock, shoe, sock, shoe.”
+  - Icebreaker: Would you rather be itchy or sticky for the rest of your life? 
 - How many of you have coded before? What languages?
 
 ---
@@ -85,6 +82,7 @@
 	- ls -la -> long list all files including ones with period at the start
 
 ---
+
 ## Common Commands
 
 - `cd <directory>`
@@ -106,10 +104,10 @@
 - `rm <file>`
 	- remove a file 
 - `grep `
-	- grep -rnH "pattern" <directory>
-- `diff <file1> <file2>`
+	- grep -rnH "pattern" directory
+- `diff file1 file2`
 	- diff two files
-- `chmod <permissions\> <file\>`
+- `chmod permissions file`
 	- Change mode `chmod 777 file` will usually suffice for anything you need if youre lazy
 
 ---
@@ -197,6 +195,7 @@ chmod 777 unix_commands.sh
 ```
 
 ---
+
 ## Programming in C
 - We mentioned you need a specific environment to dev
 	- You need to be able to run `gcc`. 
@@ -284,5 +283,6 @@ I also reference notes from Professor Hong who has great github.io: https://hong
 ---
 
 ## Homework
-- <TK: Add homework details>
+- See Teams assignment
+- Will have instructions for how we want to review and submit assignments in this class
 </textarea> <script> var slideshow = remark.create(); </script> </body> </html>
