--- a/lessons/CS102 Lesson 2 - Functions, Variables, Types, Operators.html
+++ b/lessons/CS102 Lesson 2 - Functions, Variables, Types, Operators.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+
 <html>
 <head>
   <meta charset="utf-8">
-  <title>CS102 Lesson 2 – Functions, Variables, Types, Operators</title>
+  <title>Lesson 2 - Functions, Variables, Types, Operators</title>
 	<link rel="stylesheet" href="../assets/css/slides.css">
   <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 
@@ -10,12 +10,12 @@
 <body>
 
 <textarea id="source">
-
-# Lesson 2 – Functions, Variables, Types, Operators
 ## CS102 @ Cooper Union
 
----
+TB 1.1 - 1.4, 1.7 some of 1.8
+2.1 - 2.7
 
+---
 ## Review
 
 Last [lesson](./lessons/CS102%20Lesson%201%20-%20Intro,%20Unix,%20Git.html) we went over the class, Git, Unix, and other general intros. This lesson we begin to dive a bit into the C programming language. 
@@ -25,7 +25,7 @@ This class is by no means going to teach you everything about C. C is a complica
 ---
 ## Functions
 
-- Functions are a key part of programming in C. We discussed in last class how you can use it to define a set of instructions to execute
+-  are a key part of programming in C. We discussed in last class how you can use it to define a set of instructions to execute
 - *main* is a special function in C - this is where your program begins executions 
 - Every program must have 1 main function somewhere
 
@@ -49,6 +49,7 @@ int main() {
 }
 ```
 - printf is a function we are calling, and we passed it the argument "Hello World!\n" 
+	- Note on ASCII representation of letters
 - This is a character string or string constant
 - Escaped sequences -> special characters, hard-to-type
 - \n is a newline character - this function will not put output on a newline by default!
@@ -319,5 +320,4 @@ while (fahr <= upper) {
 	- modifiers to arg replacements
 - Can we fix arithmetic issues? (grab a row and compare to the *real* calculation)
 	- 0F is not exactly -17C...
-
 </textarea> <script> var slideshow = remark.create(); </script> </body> </html>
