--- a/lessons/CS102 Lesson 3 - Basic Input + Output, Arrays, More Operators, Conditionals.html
+++ b/lessons/CS102 Lesson 3 - Basic Input + Output, Arrays, More Operators, Conditionals.html
@@ -29,7 +29,7 @@ Think of these programs as processing streams of character
 
 ---
 
-## File And Character Processing
+## File and Character Processing
 
 - A text stream is a sequence of characters divided into lines
 - Each line consists of zero or more characters followed by a newline character
