Update headers for each lesson

--- a/lessons/CS102 Lesson 2 - Functions, Variables, Types, Operators.html
+++ b/lessons/CS102 Lesson 2 - Functions, Variables, Types, Operators.html
@@ -10,7 +10,7 @@
 <body>
 
 <textarea id="source">
-## CS102 @ Cooper Union
+# Functions, Variables, Types, Operators
 
 TB 1.1 - 1.4, 1.7 some of 1.8
 2.1 - 2.7
