--- a/lessons/CS102 Lesson 3 - Basic Input + Output, Arrays, More Operators, Conditionals.html
+++ b/lessons/CS102 Lesson 3 - Basic Input + Output, Arrays, More Operators, Conditionals.html
@@ -10,7 +10,7 @@
 <body>
 
 <textarea id="source">
-## CS102 @ Cooper Union
+# Basic IO, Arrays, More Operators, Conditionals
 
 TB: 1.5 - 1.6, 1.9
 2.9-2.11
