Add syllabus to lecture notes 1

--- a/lessons/CS102 Lesson 1 - Intro, Unix, Git.html
+++ b/lessons/CS102 Lesson 1 - Intro, Unix, Git.html
@@ -23,7 +23,7 @@
 
 ## Course Website & Syllabus
 - [Course main page](https://husam-6.github.io/almanakly.github.io/)
-- [Syllabus]
+- [Syllabus](https://cooperunion-my.sharepoint.com/:b:/g/personal/h_almanakly_cooper_edu/EZpAPMCf8wFKtmcXVgJOY2ABthHQD-jTOphIHVV9UiK-7A?e=S6aAYm)
 
 ---
 
